adminadmin used as example password

--- a/s3-config.json
+++ b/s3-config.json
@@ -4,8 +4,8 @@
             "name": "me",
             "credentials": [
                 {
-                "accessKey": "any",
-                "secretKey": "anylongkey"
+                "accessKey": "adminadmin",
+                "secretKey": "adminadmin"
                 }
             ],
             "actions": [
