found problem with the AWS-SDK, resolved by changing AWS_REGION (I hate AWS)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,6 +67,7 @@ services:
           S3_ENDPOINT: http://s3:8333    # seaweedfs s3 endpoint
           AWS_ACCESS_KEY_ID: adminadmin
           AWS_SECRET_ACCESS_KEY: adminadmin
+          AWS_REGION: us-east-1
       volumes:
           - source_document:/data
   # interaction API
