--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -59,37 +59,49 @@ services:
       - ./s3-config.json:/config/config.json
   # ingestion API
   gnam-api:
-      image: ghcr.io/fcl-lm/gnam-api:main
-      container_name: gnam-api
-      ports:
-          - "9090:9090"
-      environment:
-          S3_ENDPOINT: http://s3:8333    # seaweedfs s3 endpoint
-          AWS_ACCESS_KEY_ID: adminadmin
-          AWS_SECRET_ACCESS_KEY: adminadmin
-          AWS_REGION: us-east-1
-      volumes:
-          - source_document:/data
+    image: ghcr.io/fcl-lm/gnam-api:main
+    container_name: gnam-api
+    ports:
+        - "9090:9090"
+    environment:
+        S3_ENDPOINT: http://s3:8333    # seaweedfs s3 endpoint
+        AWS_ACCESS_KEY_ID: adminadmin
+        AWS_SECRET_ACCESS_KEY: adminadmin
+    volumes:
+        - source_document:/data
   # interaction API
   privategpt:
-      image: ghcr.io/fcl-lm/privategpt:main
-      ports:
-         - 5000:5000
-      environment:
-         S3_ENDPOINT: "http://s3:8333"
-         S3_ACCESS_KEY: "adminadmin"
-         S3_SECRET_KEY: "adminadmin"
-         ELASTIC_ENDPOINT: "http://elastic:adminadmin@elastic:9200"
-         ELASTIC_INDEX: test_index
-         MODEL_TYPE: GPT4All
-         MODEL_NAME: ggml-gpt4all-j-v1.3-groovy.bin
-         EMBEDDINGS_MODEL_NAME: all-MiniLM-L6-v2
-         MODEL_N_CTX: 1000
-         MODEL_N_BATCH: 8
-         TARGET_SOURCE_CHUNKS: 4
-      volumes:
-         - privategpt-tmp:/tmp
-         - privategpt-models:/privategpt/models
+    image: ghcr.io/fcl-lm/privategpt:main
+    ports:
+      - 5000:5000
+    environment:
+      S3_ENDPOINT: "http://s3:8333"
+      S3_ACCESS_KEY: "adminadmin"
+      S3_SECRET_KEY: "adminadmin"
+      ELASTIC_ENDPOINT: "http://elastic:adminadmin@elastic:9200"
+      ELASTIC_INDEX: test_index
+      MODEL_TYPE: GPT4All
+      MODEL_NAME: ggml-gpt4all-j-v1.3-groovy.bin
+      EMBEDDINGS_MODEL_NAME: all-MiniLM-L6-v2
+      MODEL_N_CTX: 10000
+      MODEL_N_BATCH: 8
+      TARGET_SOURCE_CHUNKS: 4
+    volumes:
+      - privategpt-tmp:/tmp
+      - privategpt-models:/privategpt/models
+  # updating the vector embeddings for the documents to be ingested with the gnam-api periodically
+  vector-store-updater:
+    image: ghcr.io/fcl-lm/vector-store-updater:main
+    environment:
+        ELASTIC_ENDPOINT: http://elastic:adminadmin@127.0.0.1:9200
+        ELASTIC_INDEX: test_index
+        EMBEDDINGS_MODEL_NAME: all-MiniLM-L6-v2
+        S3_ENDPOINT: "http://127.0.0.1:8333"
+        S3_ACCESS_KEY: "adminadmin"
+        S3_SECRET_KEY: "adminadmin"
+    volumes:
+      - vector-store-updater:/root/ntlk_data
+
 
 volumes:
   source_document:
@@ -100,3 +112,4 @@ volumes:
   seaweed-filer:
   seaweed-s3:
   elastic:
+  vector-store-updater:
