--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,23 @@ services:
       - xpack.security.transport.ssl.enabled=false
       - discovery.type=single-node
       - ELASTIC_PASSWORD=adminadmin
+  # ingestion API
+  gnam-api:
+    restart: always
+    image: ghcr.io/fcl-lm/gnam-api:main
+    # build: .
+    container_name: gnam-api
+    ports:
+      - "9090:9090"
+    environment:
+      S3_ENDPOINT: http://s3:8333   # seaweedfs s3 endpoint, to change when deployed
+      AWS_ACCESS_KEY_ID: adminadmin
+      AWS_SECRET_ACCESS_KEY: adminadmin
+      # AWS_REGION: us-east-1
+    depends_on:
+      - s3
+    volumes:
+      - ./source_document:/data
   #seaweedfs cluster (master, volume, filer)
   master:
     image: chrislusf/seaweedfs # use a remote image
@@ -51,24 +68,13 @@ services:
     ports:
       - 127.0.0.1:8333:8333
     command: 's3 -filer="filer:8888" -ip.bind=0.0.0.0 -config=/config/config.json'
+    # set the s3 config file in the same directory as the one seen below
     depends_on:
       - master
       - filer
     volumes:
       - seaweed-s3:/data
       - ./s3-config.json:/config/config.json
-  # ingestion API
-  gnam-api:
-    image: ghcr.io/fcl-lm/gnam-api:main
-    container_name: gnam-api
-    ports:
-        - "9090:9090"
-    environment:
-        S3_ENDPOINT: http://s3:8333    # seaweedfs s3 endpoint
-        AWS_ACCESS_KEY_ID: adminadmin
-        AWS_SECRET_ACCESS_KEY: adminadmin
-    volumes:
-        - source_document:/data
   # interaction API
   privategpt:
     image: ghcr.io/fcl-lm/privategpt:main
@@ -96,11 +102,18 @@ services:
         ELASTIC_ENDPOINT: http://elastic:adminadmin@127.0.0.1:9200
         ELASTIC_INDEX: test_index
         EMBEDDINGS_MODEL_NAME: all-MiniLM-L6-v2
-        S3_ENDPOINT: "http://127.0.0.1:8333"
+        S3_ENDPOINT: "http://s3:8333"
         S3_ACCESS_KEY: "adminadmin"
         S3_SECRET_KEY: "adminadmin"
     volumes:
       - vector-store-updater:/root/ntlk_data
+  # web-gui:
+  #   image: ghcr.io/fcl-lm/FCL-svelte-webgui:main
+  #   ports:
+  #     - 80:80
+  #     - 443:443
+  #   environment:
+  #     S3_ENDPOINT: "http://s3:8333"
 
 
 volumes:
