--- a/k8s-deployment/seaweedfs-master-deployment.yaml
+++ b/k8s-deployment/seaweedfs-master-deployment.yaml
@@ -26,8 +26,7 @@ spec:
             requests:
               cpu: "0.5"
               memory: 2Gi
-          #command: ["/usr/bin/weed" , "master", "-ip=seaweedfs-master", "-ip.bind=0.0.0.0"]
-          command: ["/usr/bin/weed" , "master", "-ip.bind=0.0.0.0"]
+          command: ["/usr/bin/weed" , "master", "-ip=seaweedfs-master", "-ip.bind=0.0.0.0"]
           volumeMounts:
             - name: seaweed-master-data
               mountPath: /data
