--- a/k8s-deployment/seaweedfs-master-deployment.yaml
+++ b/k8s-deployment/seaweedfs-master-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: master
           image: chrislusf/seaweedfs
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9333
             - containerPort: 19333
