--- a/k8s-deployment/seaweedfs-s3-deployment.yaml
+++ b/k8s-deployment/seaweedfs-s3-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: s3
           image: chrislusf/seaweedfs
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8333
           resources:
