--- a/k8s-deployment/elastic-deployment.yaml
+++ b/k8s-deployment/elastic-deployment.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: elastic
           image: docker.elastic.co/elasticsearch/elasticsearch:8.8.1
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9200
           resources:
