--- a/k8s-deployment/privategpt-deployment.yaml
+++ b/k8s-deployment/privategpt-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: privategpt
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: privategpt
@@ -14,12 +14,19 @@ spec:
     spec:
       initContainers:
         # wait for elastic and s3 to be ready
+        # - name: wait-for-elastic
+        #   image: busybox
+        #   command: ['sh', '-c', 'until wget -qO- http://elastic:9200; do echo waiting for elastic; sleep 2; done;']
         - name: wait-for-elastic
           image: busybox
-          command: ['sh', '-c', 'until wget -qO- http://elastic:9200; do echo waiting for elastic; sleep 2; done;']
+          command: ['sh', '-c', "until nslookup elastic-search; do echo waiting for elastic-search; sleep 2; done"]      
+        # - name: wait-for-s3
+        #   image: busybox
+        #   command: ['sh', '-c', 'until wget -qO- http://s3:8333; do echo waiting for s3; sleep 2; done;']
         - name: wait-for-s3
           image: busybox
-          command: ['sh', '-c', 'until wget -qO- http://s3:8333; do echo waiting for s3; sleep 2; done;']
+          command: ['sh', '-c', "until nslookup seaweedfs-s3; do echo waiting for s3-service; sleep 2; done"]      
+        
       containers:
         - name: privategpt
           image: ghcr.io/fcl-lm/privategpt:main
@@ -28,19 +35,19 @@ spec:
           resources:
             limits:
               cpu: "11"
-              memory: 20Gi
+              memory: 15Gi
             requests:
               cpu: "10"
-              memory: 15Gi
+              memory: 10Gi
           env:
             - name: S3_ENDPOINT
-              value: "http://s3:8333"
+              value: "http://seaweedfs-s3:8333"
             - name: S3_ACCESS_KEY
               value: "adminadmin"
             - name: S3_SECRET_KEY
               value: "adminadmin"
             - name: ELASTIC_ENDPOINT
-              value: "http://elastic:adminadmin@elastic:9200"
+              value: "http://elastic:adminadmin@elastic-search:9200"
             - name: ELASTIC_INDEX
               value: test_index
             - name: MODEL_TYPE
