--- a/k8s-deployment/gnam-api-deployment.yaml
+++ b/k8s-deployment/gnam-api-deployment.yaml
@@ -16,7 +16,8 @@ spec:
       initContainers:
         - name: wait-for-s3
           image: busybox
-          command: ['sh', '-c', 'until nslookup seaweedfs-s3; do echo waiting for s3; sleep 2; done;']
+          imagePullPolicy: IfNotPresent
+          command: ['sh', '-c', 'until nslookup seaweedfs-s3.default.svc.cluster.local; do echo waiting for s3; sleep 2; done;']
       containers:
         - name: gnam-api
           image: ghcr.io/fcl-lm/gnam-api:main
