--- a/k8s-deployment/vector-store-updater-deployment.yaml
+++ b/k8s-deployment/vector-store-updater-deployment.yaml
@@ -16,10 +16,12 @@ spec:
         # wait for elastic and s3 to be ready
         - name: wait-for-elastic
           image: busybox
-          command: ['sh', '-c', 'until wget -qO- http://elastic-search:9200; do echo waiting for elastic; sleep 2; done;']
+          imagePullPolicy: IfNotPresent
+          command: ['sh', '-c', 'until nslookup elastic-search.default.svc.cluster.local; do echo waiting for elastic; sleep 2; done;']
         - name: wait-for-s3
           image: busybox
-          command: ['sh', '-c', 'until wget -qO- http://seaweedfs-s3:8333; do echo waiting for s3; sleep 2; done;']
+          imagePullPolicy: IfNotPresent
+          command: ['sh', '-c', 'until nslookup seaweedfs-s3.default.svc.cluster.local; do echo waiting for s3; sleep 2; done;']
       containers:
         - name: vector-store-updater
           image: ghcr.io/fcl-lm/vector-store-updater:main
