--- a/k8s-deployment/gnam-api-deployment.yaml
+++ b/k8s-deployment/gnam-api-deployment.yaml
@@ -42,4 +42,5 @@ spec:
               mountPath: /data
       volumes:
         - name: source-document
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: gnam-api-persistent
