seaweedfs with persistent volumes and fix of issue #2

--- a/k8s-deployment/seaweedfs-filer-deployment.yaml
+++ b/k8s-deployment/seaweedfs-filer-deployment.yaml
@@ -35,4 +35,5 @@ spec:
               mountPath: /data
       volumes:
         - name: seaweed-filer-data
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: seaweedfs-filer-persistent
