--- a/k8s-deployment/seaweedfs-volume-deployment.yaml
+++ b/k8s-deployment/seaweedfs-volume-deployment.yaml
@@ -16,6 +16,8 @@ spec:
         - name: volume
           image: chrislusf/seaweedfs
           imagePullPolicy: IfNotPresent
+          tty: true
+          stdin: true
           ports:
             - containerPort: 8080
             - containerPort: 18080
@@ -28,10 +30,11 @@ spec:
             requests:
               cpu: "0.5"
               memory: 2Gi
-          command: ["/usr/bin/weed" ,"volume", "-mserver=seaweedfs-master:9333", "-ip.bind=0.0.0.0", "-port=8080", "-dir=/data"]
+          command: ["/usr/bin/weed" ,"volume", "-mserver=seaweedfs-master:9333", "-max=0","-ip.bind=0.0.0.0", "-port=8080", "-dir=/data"]
           volumeMounts:
             - name: seaweed-volume-data
               mountPath: /data
       volumes:
         - name: seaweed-volume-data
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: seaweedfs-volume-persistent
