--- a/k8s-deployment/services.yaml
+++ b/k8s-deployment/services.yaml
@@ -64,11 +64,13 @@ metadata:
 spec:
   selector:
     app: s3
+  type: NodePort
   ports:
     - name: seaweedfs-s3-port
       protocol: TCP
       port: 8333
       targetPort: 8333
+      nodePort: 30333
     - name: seaweedfs-master-port
       protocol: TCP
       port: 9333
@@ -87,6 +89,7 @@ kind: Service
 metadata:
   name: gnam-api
 spec:
+  type: NodePort
   selector:
     app: gnam-api
   ports:
@@ -94,6 +97,7 @@ spec:
       protocol: TCP
       port: 9090
       targetPort: 9090
+      nodePort: 30090
     - name: seaweedfs-s3-port
       protocol: TCP
       port: 8333
