--- a/k8s-deployment/privategpt-deployment.yaml
+++ b/k8s-deployment/privategpt-deployment.yaml
@@ -20,7 +20,7 @@ spec:
         - name: wait-for-elastic
           image: busybox
           imagePullPolicy: IfNotPresent
-          command: ['sh', '-c', "until nslookup elastic-search.default.svc.cluster.local; do echo waiting for elastic-search; sleep 2; done"]      
+          command: ['sh', '-c', "until nslookup elastic.default.svc.cluster.local; do echo waiting for elastic-search; sleep 2; done"]      
         # - name: wait-for-s3
         #   image: busybox
         #   command: ['sh', '-c', 'until wget -qO- http://s3:8333; do echo waiting for s3; sleep 2; done;']
@@ -31,7 +31,10 @@ spec:
         
       containers:
         - name: privategpt
+          # image: privategpt-localbuild:latest
+          # imagePullPolicy: Never
           image: ghcr.io/fcl-lm/privategpt:main
+          imagePullPolicy: Always
           ports:
             - containerPort: 5000
           resources:
@@ -49,7 +52,7 @@ spec:
             - name: S3_SECRET_KEY
               value: "adminadmin"
             - name: ELASTIC_ENDPOINT
-              value: "http://elastic:adminadmin@elastic-search:9200"
+              value: "http://elastic:adminadmin@elastic:9200"
             - name: ELASTIC_INDEX
               value: test_index
             - name: MODEL_TYPE
