--- a/k8s-deployment/services.yaml
+++ b/k8s-deployment/services.yaml
@@ -108,6 +108,7 @@ kind: Service
 metadata:
   name: elastic
 spec:
+  type: NodePort
   selector:
     app: elastic
   ports:
@@ -115,6 +116,7 @@ spec:
       protocol: TCP
       port: 9200
       targetPort: 9200
+      nodePort: 30920
 ---
 apiVersion: v1
 kind: Service
@@ -163,6 +165,7 @@ kind: Service
 metadata:
   name: web-gui
 spec:
+  type: NodePort
   selector:
     app: web-gui
   ports:
@@ -170,6 +173,7 @@ spec:
       protocol: TCP
       port: 3000
       targetPort: 3000
+      nodePort: 30000
     - name: privategpt-port
       protocol: TCP
       port: 5000
