--- a/k8s-deployment/web-gui-deployment.yaml
+++ b/k8s-deployment/web-gui-deployment.yaml
@@ -20,7 +20,8 @@ spec:
           command: ['sh', '-c', 'until nslookup privategpt-loadbalancer-service.default.svc.cluster.local; do echo waiting for flask; sleep 2; done;']
       containers:
         - name: web-gui
-          image: ghcr.io/fcl-lm/fcl-svelte-webgui:main
+          image: ghcr.io/fcl-lm/fcl-gui:main
+          imagePullPolicy: Always
           ports:
             - containerPort: 3000
           resources:
@@ -32,7 +33,8 @@ spec:
               memory: 2Gi
           env:
             - name: PUBLIC_FLASK_ENDPOINT
-              value: http://privategpt-loadbalancer-service:5000   #using the loadbalancer service, also the loadbalancer service IP should be public
+              value: http://192.168.67.2:31864
+              #value: http://privategpt-loadbalancer-service:5000   #using the loadbalancer service, also the loadbalancer service IP should be public
           volumeMounts:
             - name: source-document
               mountPath: /data
